# grades

./: docker-compose.yml  pyproject.toml
grades/: environment.py  main.py  scripts.py
grades/domain/enitites/: average.py  grade.py
grades/domain/services/: average_calculator.py
grades/infra/repositories/: grade.py
tests/domain/entities/: test_average.py  test_grade.py
tests/domain/services/: test_average_calculator.py
tests/entities/: test_average.py  test_grade.py
tests/fixtures/grades/: clean.sql  create.sql  drop.sql  populate.sql
tests/infra/repositories/: test_grade_repository_postgres.py
tests/services/: test_average_calculator.py
