[project]
name = "grades"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psycopg[binary,pool]>=3.2.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
]

[tool.pytest.ini_options]
pythonpath = "grades"
testpaths = [
    "tests",
]
